--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Blog",
   "short_name": "Blog",
-  "start_url": "/Blog/post/",
+  "start_url": "/Blog/",
   "icons": [
       {
           "src": "assets/icons/android-chrome-36x36.png",
